--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <title>Utah RSS Feed Reader</title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -20,11 +20,11 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/services/FeedService.js"></script>
   </head>
   <body ng-app="starter">
     <ion-nav-bar>
-        <ion-nav-back-button></ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view></ion-nav-view>
-</body>
+  </body>
 </html>
